--- a/A3-Antistasi/changelog.txt
+++ b/A3-Antistasi/changelog.txt
@@ -1,3 +1,26 @@
+Version 2.4.1.VN.03 - 29th June 2021
+
+Changes from version 2.4.1.VN.02 to 2.4.1.VN.03 Antistasi Community Edition
+
+================ Major ================
+  - none
+
+================ Minor ================
+  - none
+
+================ Groundwork ================
+  -  none
+
+================ Refactor ================
+  - none
+
+================ Bugfixes ================
+  - fixed punishment missions spawning more than 40 civs
+
+================ DISCLAIMER ================
+  - Please note that this changelog may contain both spelling/grammatical errors and/or factual errors. Should any factual errors exist, we apologise but with the sheer number of changes made per version it can be easy to lose or mistake a change when writing up the changelog.
+
+
 Version 2.4.1.VN.02 - 15th May 2021
 
 Changes from version 2.4.1.VN.01 to 2.4.1.VN.02 Antistasi Community Edition
